fix: centre aligning contributors section

--- a/src/assets/css/contributors.scss
+++ b/src/assets/css/contributors.scss
@@ -222,11 +222,13 @@ $screen-xl-min: 1200px;
     position: relative;
     display: flex;
     flex-wrap: wrap;
+    justify-content: center;
     .image-container {
         display: inline-flex;
-        width: calc(33% - 30px);
+        width: calc(33% - 35px);
         position: relative;
         padding: 10px 15px;
+        justify-content: center;
         @include md {
             width: calc(20% - 30px);
         }
